[TASK] Clean up and basic commands

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,13 +3,16 @@ project(todo)
 set(CMAKE_CXX_STANDARD 23)
 
 add_library(todo-lib
-        MainWindow.cpp
-        MainWindow.h
-        TODOElement.h
-        TodoService.cpp
-        TodoService.h
-        ServiceContainer.cpp
-        ServiceContainer.h)
+        src/UI/MainWindow.cpp
+        src/UI/MainWindow.h
+        src/DTO/TODOElement.h
+        src/Services/TodoService.cpp
+        src/Services/TodoService.h
+        src/ServiceContainer.cpp
+        src/ServiceContainer.h
+        src/Services/CommandProcessor.cpp
+        src/Services/CommandProcessor.h)
+target_include_directories(todo-lib PUBLIC src)
 
 include(FetchContent)
 FetchContent_Declare(ftxui
@@ -25,6 +28,6 @@ target_link_libraries(todo-lib PUBLIC
         ftxui::screen
 )
 
-add_executable(todo main.cpp)
+add_executable(todo src/main.cpp)
 target_link_libraries(todo todo-lib)
 add_dependencies(todo todo-lib)
