[TASK] Add prio command

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,8 @@ add_library(todo-lib
         src/ServiceContainer.h
         src/Services/CommandProcessor.cpp
         src/Services/CommandProcessor.h
-        src/DTO/TodoContainer.h)
+        src/DTO/TodoContainer.h
+        src/DTO/Priority.h)
 target_include_directories(todo-lib PUBLIC src)
 
 include(FetchContent)
