[TASK] Implement logging

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,7 +40,9 @@ add_library(todo-lib
         src/Interfaces/IWindowStateHandler.h
         src/Interfaces/IConfigService.h
         src/Services/ConfigService.cpp
-        src/Services/ConfigService.h)
+        src/Services/ConfigService.h
+        src/Logger.cpp
+        src/Logger.h)
 target_include_directories(todo-lib PUBLIC src)
 
 include(FetchContent)
